--- a/components/FinalScreen/FinalScreen.css
+++ b/components/FinalScreen/FinalScreen.css
@@ -1,6 +1,6 @@
 .end-intro-container {
     min-height: 100vh;
-    background-image: url("src/assets/media/backgroundEnd.png");
+    /* background-image: url("src/assets/media/backgroundEnd.png"); */
     background-size: cover;
     width: 100%;
     height: 100%;
