--- a/components/IntroAnimationScreen/IntroAnimationScreen.css
+++ b/components/IntroAnimationScreen/IntroAnimationScreen.css
@@ -1,5 +1,5 @@
 .open-container {
-    background-image: url("src/assets/media/OpenAnim.gif");
+    /* background-image: url("src/assets/media/OpenAnim.gif"); */
     background-size: cover;
     width: 100%;
     height: 100%;
