--- a/components/TopicsScreen/TopicsScreen.css
+++ b/components/TopicsScreen/TopicsScreen.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("src/assets/media/MainBackground.png");
+  /* background-image: url("src/assets/media/MainBackground.png"); */
   background-size: cover;
   width: 100%;
   height: 100%;
