--- a/components/TrueFalsePractice/TrueFalsePractice.css
+++ b/components/TrueFalsePractice/TrueFalsePractice.css
@@ -1,6 +1,5 @@
 .practice-container {
-    /* padding: 6%; */
-    background-image: url("src/assets/media/MainBackground.png");
+    /* background-image: url("src/assets/media/MainBackground.png"); */
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -25,7 +24,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
     padding: 5%;
     text-align: center;
     height: 65vh;
