--- a/components/LearningEndScreen/LearningEndScreen.css
+++ b/components/LearningEndScreen/LearningEndScreen.css
@@ -1,6 +1,5 @@
 .end-intro-container {
     min-height: 100vh;
-    /* background-image: url("src/assets/media/MainBackground.png"); */
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -11,6 +10,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    font-family: "Fredoka", sans-serif;
 }
 
 .primary-btn {
@@ -25,6 +25,7 @@
     border-radius: 30px;
 
     font-size: 120%;
+    font-family: "Fredoka";
 }
 
 .img-btn-end-intro {
