--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,12 @@ html {
   direction: rtl;
 }
 
-body, button, input, textarea, p, div {
+body,
+button,
+input,
+textarea,
+p,
+div {
   font-family: "Fredoka", sans-serif;
 }
 
@@ -25,8 +30,9 @@ body, button, input, textarea, p, div {
 .mobile-frame {
   width: 100%;
   max-width: 430px;
-  aspect-ratio: 9 / 19.5;
-  /* יחס של טלפון */
+  /* aspect-ratio: 9 / 19.5; */
+  min-height: 100vh;
+  aspect-ratio: auto;
   background-color: #3B6771;
   position: relative;
   overflow: hidden;
