--- a/components/LearningScreen/LearningScreen.css
+++ b/components/LearningScreen/LearningScreen.css
@@ -26,6 +26,8 @@
     padding: 5%;
     text-align: center;
     height: 65vh;
+    min-height: 60vh;
+/* padding: 2rem 1rem; */
 
     background: rgba(23, 56, 99, 0.9);
     border-radius: 10px;
@@ -40,22 +42,27 @@
 
 .learning-title {
     padding: 15% 0 0 0;
-    width: 120%;
+    width: 100%;
     height: auto;
     font-weight: 400;
-    font-size: 220%;
+    /* font-size: 220%; */
+    /* font-size: 2.2rem; */
+    font-size: clamp(1.5rem, 6.5vw, 2.2rem);
     text-align: center;
     color: #FFFFFF;
 }
 
 .learning-p {
-    font-size: 115%;
+    /* font-size: 115%; */
+    /* font-size: 1.2rem; */
+    font-size: clamp(1rem, 4vw, 1.2rem);
 }
 
 .explosion-container {
     position: relative;
     width: 100%;
-    height: 300px;
+    /* height: 300px; */
+    height: clamp(200px, 40vh, 300px);
 }
 
 .earth {
