--- a/components/AsteroidPractice/AsteroidPractice.css
+++ b/components/AsteroidPractice/AsteroidPractice.css
@@ -111,6 +111,7 @@
     width: 8%;
     min-width: 30px;
     transition: all 1s ease-in-out;
+    transform: translate(-50%, -50%) rotate(-90deg);
   }
   
   .controls {
