--- a/components/IntroAnimationScreen/IntroAnimationScreen.css
+++ b/components/IntroAnimationScreen/IntroAnimationScreen.css
@@ -1,10 +1,10 @@
 .open-container {
-    /* background-image: url("src/assets/media/OpenAnim.gif"); */
     background-size: cover;
     width: 100%;
     height: 100%;
     min-height: 100vh;
     max-width: 480px;
+    position: relative;
 }
 
 .logo {
@@ -23,7 +23,8 @@
     width: 80%;
     font-size: clamp(18px, 7vw, 28px);
     right: 10%;
-    top: 55%;
+    top: 60%;
+    font-weight: 450;
 }
 
 .btn {
@@ -33,24 +34,35 @@
     align-items: center;
     
     position: absolute;
-    top: 70%;
+    top: 75%;
     right: 40%;
     
     background: #FFD096;
     animation: glowPulse 2s ease-in-out infinite 2.5s;
+    color: black;
     
     font-size: clamp(14px, 4vw, 20px);
     border-radius: 40px;
     padding: 9px 22px;
 }
 
-@keyframes flyUp {
+/* @keyframes flyUp {
     from {
         transform: translateY(100vh);
     }
 
     to {
         transform: translateY(0);
+    }
+} */
+
+@keyframes flyUp {
+    from {
+        transform: translate(-50%, 100vh);
+    }
+
+    to {
+        transform: translate(-50%, 0);
     }
 }
 
@@ -71,7 +83,8 @@
 .spaceship-wrapper {
     position: absolute;
     top: 10%;
-    right: 25%;
+    left: 50%;
+    width: clamp(150px, 58vw, 220px);
     animation:
         flyUp 2.5s cubic-bezier(.17, .67, .4, 1.4) forwards,
         float 4s ease-in-out infinite 2.5s;
