--- a/components/LearningEndScreen/LearningEndScreen.css
+++ b/components/LearningEndScreen/LearningEndScreen.css
@@ -1,24 +1,4 @@
-/* .end-intro-container {
-    min-height: 100vh;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    max-width: 480px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    font-family: "Fredoka", sans-serif;
-    position: relative;
-    display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
- 
-
-.primary-btn {
+.primary-btn-end-intro {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,17 +9,15 @@
     box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
 
-    /* font-size: 120%; */
-    /* font-size: clamp(0.95rem, 3.5vw, 1.2rem); */
+    color: black;
     font-size: clamp(0.85rem, 4.2vw, 1.2rem);
-    /* font-family: "Fredoka"; */
 }
 
 .img-btn-end-intro {
     width: 25%;
 }
 
-.secondary-btn {
+.secondary-btn-end-intro {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -50,9 +28,8 @@
     background: #CEBFAC;
     box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
     border-radius: 30px;
+    color: black;
 
-    /* font-size: 120%; */
-    /* font-size: clamp(0.95rem, 3.5vw, 1.2rem); */
     font-size: clamp(0.85rem, 4.2vw, 1.2rem);
 }
 
@@ -61,53 +38,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: black;
 }
 
 .astroTilLearn {
-    /* width: 40%; */
     width: clamp(120px, 35vw, 200px);
-    margin: 6%;
-    /* margin-top: auto; */
-    /* position: absolute; */
-    /* bottom: 6%; */
+    margin: 10%;
 }
 
-.end-intro-title {
-    /* font-size: 190%; */
-    /* font-size: clamp(1.4rem, 5vw, 2rem); */
-    font-size: clamp(1.2rem, 6.5vw, 2rem);
+.end-intro-title-header {
+    font-size: clamp(1.2rem, 7vw, 3rem);
     font-weight: 500;
-    margin-top: 20%;
-    /* margin-top: clamp(3rem, 12vh, 6rem); */
+    margin-top: 25%;
     width: 85%;
 }
 
-.end-intro-text {
-    /* font-size: 140%; */
-    /* font-size: clamp(1rem, 4vw, 1.4rem); */
-    font-size: clamp(0.9rem, 4.8vw, 1.4rem);
+.end-intro-text-p {
+    font-size: clamp(1rem, 5.1vw, 1.4rem);
     width: 80%;
     margin-bottom: 10%;
 }
 
 .ques-counter {
-    /* font-size: 150%; */
-    /* font-size: clamp(1rem, 4.5vw, 1.5rem); */
     font-size: clamp(0.95rem, 5vw, 1.5rem);
     font-weight: 500;
     margin: -1% 0;
 }
 
-/* .end-intro-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  } */
-  
-  .content-wrapper {
+.content-wrapper {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
+}
