--- a/components/TrueFalsePractice/TrueFalsePractice.css
+++ b/components/TrueFalsePractice/TrueFalsePractice.css
@@ -1,5 +1,4 @@
 .practice-container {
-    /* background-image: url("src/assets/media/MainBackground.png"); */
     background-size: cover;
     width: 100%;
     height: 100%;
@@ -39,7 +38,7 @@
   }
   
   .practice-question {
-    font-size: 150%;
+    font-size: clamp(1rem, 5.3vw, 1.5rem);
     margin-bottom: 10%;
     line-height: 1.6;
   }
@@ -54,7 +53,7 @@
   .answer-btn {
     width: 45%;
     height: 42vh;
-    font-size: 190%;
+    font-size: clamp(1.5rem, 7vw, 2.2rem);
     border: none;
     cursor: pointer;
     transition: 0.3s;
@@ -79,9 +78,11 @@
   }
   
   .feedback {
-    margin-top: 8%;
-    font-size: 18px;
-    font-weight: bold;
+    position: absolute;
+    margin-top: 2%;
+    margin-bottom: 3%;
+    font-size: clamp(1rem, 4vw, 1.5rem);
+    font-weight: 500;
   }
   
   .feedback.correct {
@@ -96,9 +97,9 @@
     padding: 15% 0 0 0;
     width: 120%;
     height: auto;
-    font-weight: 400;
-    font-size: 220%;
+    font-weight: 500;
     text-align: center;
+    font-size: clamp(1.5rem, 6.5vw, 2.2rem);
   }
 
   .astroTil-practice {
