--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #3B6771;
+    background-color: #0A1E39;
     margin: 0;
         box-sizing: border-box;
         background-size: 100vw 100vh;
