--- a/components/AsteroidPractice/AsteroidPractice.css
+++ b/components/AsteroidPractice/AsteroidPractice.css
@@ -11,27 +11,31 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: center;
 }
 
 .asteroid-header {
-  width: 100%;
   display: flex;
   flex-direction: column;
   text-align: center;
-  width: 86%;
-  justify-content: space-between;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 4%;
+  align-content: center;
 }
 
 .asteroid-title {
   font-size: 1.9rem;
   font-weight: 500;
   margin-top: 15%;
+  text-align: center;
 }
 
 .asteroid-p {
   font-size: 1rem;
   margin-bottom: -1%;
+  width: 86%;
 }
 
 .asteroid-counter {
@@ -64,7 +68,6 @@
   background: #e6f0ff;
   color: #001a33;
   padding: 10px 16px;
-  border-radius: 20px;
   border-radius: 50px 50px 0 50px;
   margin-bottom: 4%;
   font-size: 1rem;
@@ -175,6 +178,7 @@
       transparent 80%);
 
   animation: explode 0.6s ease-out forwards;
+  z-index: 10;
 }
 
 @keyframes explode {
